force-app/main/default/objects/Person__c/fields/Person_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Person_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Person External Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>